Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35043

Unsuitable error upon an attempt to create MEMORY table with vector key

    XMLWordPrintable

Details

    Description

      bb-11.6-MDEV-32887-vector fe9092a8

      MariaDB [test]> create table t (v binary(255) not null, vector index(v)) engine=Memory;
      ERROR 1939 (HY000): Engine MEMORY failed to discover table `test`.`t` with 'CREATE TABLE i (                     layer tinyint not null,            tref varbinary(8),                vec blob not null,                 neighbors blob not null,           unique (tref),                     key (layer))                     '
      

      It is not surprising that the attempt fails, but the error could be better.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10m
                  10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.