MDEV-35043 Unsuitable error upon an attempt to create MEMORY table with vector key

MEMORY engine doesn't support blobs